--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/a6243ca7b9.js" crossorigin="anonymous"></script>
     <title>Music Player</title>
   </head>
   <body>
