feat(index.html): create header option structure element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   <body>
     <div class="container">
       <div class="musicPlayerBox">
-        
+        <div class="header-option">
+          <div class="backBtn">
+            <i class="fa-solid fa-angle-left"></i>
+          </div>
+          <div class="moreBtn">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+        </div>
       </div>
     </div>
 
