feat(style.css): set style for header option elements

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="container">
       <div class="musicPlayerBox">
         <div class="header-option">
-          <div class="backBtn">
+          <div class="circleBtn backBtn">
             <i class="fa-solid fa-angle-left"></i>
           </div>
-          <div class="moreBtn">
+          <div class="circleBtn moreBtn">
             <i class="fa-solid fa-bars"></i>
           </div>
         </div>
