feat(index.html & style.css): create song img elem & set style

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <i class="fa-solid fa-bars"></i>
           </div>
         </div>
+
+        <img src="./media/468-thumbnail.png" class="songImg">
       </div>
     </div>
 
