feat(index.html & style.css): create song title elements & set style

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         </div>
 
         <img src="./media/468-thumbnail.png" class="songImg">
+
+        <div class="songTitle">
+          <h1 class="songName">Nafasam Harja Boodi Tanha</h1>
+          <p class="artistName">Mehyad ft Lenna</p>
+        </div>
       </div>
     </div>
 
