--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
           <h1 class="songName">Nafasam Harja Boodi Tanha</h1>
           <p class="artistName">Mehyad ft Lenna</p>
         </div>
+
+        <audio controls>
+          <source src="./media/Nafasam-Harja-Boodi-Tanha-320.mp3" type="audio/mpeg">
+        </audio>
+
+        
       </div>
     </div>
 
