--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
           <source src="./media/Nafasam-Harja-Boodi-Tanha-320.mp3" type="audio/mpeg">
         </audio>
 
-        
+        <input type="range" value="0" id="timeBar">
+
       </div>
     </div>
 
