--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 
         <input type="range" value="0" id="timeBar">
 
+        <div class="controlsBtn">
+          <div class="btn"><i class="fa-solid fa-backward"></i></div>
+          <div class="btn"><i class="fa-solid fa-play"></i></div>
+          <div class="btn"><i class="fa-solid fa-forward"></i></div>
+        </div>
       </div>
     </div>
 
