feat(script.js): select element

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
           <p class="artistName">Mehyad ft Lenna</p>
         </div>
 
-        <audio controls>
+        <audio controls id="songElem">
           <source src="./media/Nafasam-Harja-Boodi-Tanha-320.mp3" type="audio/mpeg">
         </audio>
 
         <input type="range" value="0" id="timeBar">
 
         <div class="controlsBtn">
-          <div class="btn"><i class="fa-solid fa-backward"></i></div>
-          <div class="btn"><i class="fa-solid fa-play"></i></div>
-          <div class="btn"><i class="fa-solid fa-forward"></i></div>
+          <div class="btn prevSongBtn"><i class="fa-solid fa-backward"></i></div>
+          <div class="btn ctrlBtn"><i class="fa-solid fa-play"></i></div>
+          <div class="btn nextSongBtn"><i class="fa-solid fa-forward"></i></div>
         </div>
       </div>
     </div>
