feat(script.js): select play pause icone elem

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="controlsBtn">
           <div class="btn prevSongBtn"><i class="fa-solid fa-backward"></i></div>
-          <div class="btn ctrlBtn"><i class="fa-solid fa-play"></i></div>
+          <div class="btn ctrlBtn"><i class="fa-solid fa-play" id="ctrlIcon"></i></div>
           <div class="btn nextSongBtn"><i class="fa-solid fa-forward"></i></div>
         </div>
       </div>
