feat(script.js): coordination timeBar and song currentTime

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <p class="artistName">Mehyad ft Lenna</p>
         </div>
 
-        <audio controls id="songElem">
+        <audio id="songElem">
           <source src="./media/Nafasam-Harja-Boodi-Tanha-320.mp3" type="audio/mpeg">
         </audio>
 
