--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
           </div>
         </div>
 
-        <img src="./media/468-thumbnail.png" class="songImg">
+        <img src="" class="songImg">
 
         <div class="songTitle">
-          <h1 class="songName">Nafasam Harja Boodi Tanha</h1>
-          <p class="artistName">Mehyad ft Lenna</p>
+          <h1 class="songName"></h1>
+          <p class="artistName"></p>
         </div>
 
-        <audio id="songElem">
-          <source src="./media/Nafasam-Harja-Boodi-Tanha-320.mp3" type="audio/mpeg">
+        <audio id="songElem" src="">
         </audio>
 
         <input type="range" value="0" id="timeBar">
