--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <div class="container">
       <div class="musicPlayerBox">
+        <div class="modal-song-menu">
+          
+        </div>
         <div class="header-option">
           <div class="circleBtn backBtn">
             <i class="fa-solid fa-angle-left"></i>
