--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <div class="musicPlayerBox">
         <div class="modal-song-menu">
           <div class="song-menu">
-            <div class="songs">
+            <!-- <div class="songs">
               <img src="./media/468-thumbnail.png" alt="">
               <div class="title">
                 <h4 class="song-Name">Nafasam</h4>
                 <p class="artist-Name">Lenna</p>
               </div>
               <i class="fa-solid fa-play"></i>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="header-option">
