style: clean codes

--- a/index.html
+++ b/index.html
@@ -3,24 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="https://kit.fontawesome.com/a6243ca7b9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/a6243ca7b9.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Music Player</title>
   </head>
   <body>
     <div class="container">
       <div class="musicPlayerBox">
         <div class="modal-song-menu">
-          <div class="song-menu">
-            <!-- <div class="songs">
-              <img src="./media/468-thumbnail.png" alt="">
-              <div class="title">
-                <h4 class="song-Name">Nafasam</h4>
-                <p class="artist-Name">Lenna</p>
-              </div>
-              <i class="fa-solid fa-play"></i>
-            </div> -->
-          </div>
+          <div class="song-menu"></div>
         </div>
         <div class="header-option">
           <div class="circleBtn backBtn">
@@ -31,21 +25,24 @@
           </div>
         </div>
 
-        <img src="" class="songImg">
+        <img src="" class="songImg" />
 
         <div class="songTitle">
           <h1 class="songName"></h1>
           <p class="artistName"></p>
         </div>
 
-        <audio id="songElem" src="">
-        </audio>
+        <audio id="songElem" src=""></audio>
 
-        <input type="range" value="0" id="timeBar">
+        <input type="range" value="0" id="timeBar" />
 
         <div class="controlsBtn">
-          <div class="btn prevSongBtn"><i class="fa-solid fa-backward"></i></div>
-          <div class="btn ctrlBtn"><i class="fa-solid fa-play" id="ctrlIcon"></i></div>
+          <div class="btn prevSongBtn">
+            <i class="fa-solid fa-backward"></i>
+          </div>
+          <div class="btn ctrlBtn">
+            <i class="fa-solid fa-play" id="ctrlIcon"></i>
+          </div>
           <div class="btn nextSongBtn"><i class="fa-solid fa-forward"></i></div>
         </div>
       </div>
